# uiao

./: .coverage  .coveragerc  .editorconfig  .gitattributes  .gitignore  .lychee.toml  .lycheeignore  .pre-commit-config.yaml  01-fix-link-extensions.ps1  02-add-missing-sidebar-entries.ps1  03-fix-index-page-links.ps1  04-enrich-landing-page.ps1  05-seed-image-prompts.ps1  06-verify-all-fixes.ps1  07-insert-image-placeholders.ps1  08-convert-findings.ps1  09-convert-orphans.ps1  1  10-delete-micro-shells.ps1  11-promote-shell-pages.ps1  12-resolve-orphan-group2.ps1  13-convert-legacy-docs.ps1  14-convert-governance-batch.ps1  15-fix-internal-links.ps1  16-fix-warn-gaps.ps1  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Deploy-uiao-core-Claude.ps1  Deploy-uiao-docs-Claude.ps1  DocTree.txt  FORMAT-CANON.md  Makefile  PROJECT-CONTEXT.md  README.md  README2.md  RELEASE_NOTES.md  (+42 more)
.claude/: settings.json  statusline.sh  uiao-core-ClaudeTree.txt
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-drafter.yml  scubagear-upstream-pin.yaml
adapters/: __init__.py  base_adapter.py
analytics/: kql_alerts.yaml
api/: auditor-api.md
canon/: DIAGRAM-STANDARDS.md  README.md  UIAO_002_SCuBA_Technical_Specification_v1.0.md  UIAO_003_Adapter_Segmentation_Overview_v1.0.md  UIAO_005_SCuBA_Value_Proposition_v1.0.md  UIAO_006_AODIM_Architecture_v1.0.md  UIAO_007_OrgTree_Modernization_AD_to_EntraID_v1.0.md  UIAO_132_CLI_Reference_v1.0.md  adapter-registry.yaml  document-registry.yaml  modernization-registry.yaml  uiao_leadership_briefing_v1.0.yaml  uiao_pitch_deck_v1.0.yaml
category/: UIAO-Category-Creation-External.md
cli/: uiao-cli.md
config/: evidence-build.json  ksi-rules.json  oscal-generate.json
core/: .gitignore  .lychee.toml  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONMON.md  PROJECT-CONTEXT.md  README.md  RELEASE_NOTES.md  pyproject.toml  version.py
dashboard/: Compliance-Dashboard.md  _quarto.yml  index.qmd
data/: README.md  appendices.yml  control-planes.yml  crosswalk-index.yml  document-skeleton.yml  fedramp_ssp_template_structure.yaml  management-stack.yml  overlay-config.yml  parameters.yml  project-plans.yml  roadmap.yml  seven-layer-model.yml  style-guide.yml  vendor-stack.yml
diagrams/: README.md  uiao-adapter-plane.puml  uiao-drift-fabric.puml  uiao-evidence-fabric.puml  uiao-governance-hierarchy.puml  uiao-governance-plane.puml  uiao-truth-fabric.puml
docs/: .gitignore  .lychee.toml  00_ControlPlaneArchitecture.md  01-getting-started.qmd  01_UnifiedArchitecture.md  02_CanonSpecification.md  03_FedRAMP20x_Crosswalk.md  04_FedRAMP20x_Phase2_Summary.md  05_ManagementStack.md  06_ProgramVision.md  07_LeadershipBriefing.md  08_ModernizationTimeline.md  09_CrosswalkIndex.md  10_DirectoryStructure.md  11_GlossaryAndDefinitions.md  404.qmd  AGENTS.md  Assessment Current SCuBA Implementa.txt  CANON_POINTER.md  CLAUDE.md  COPILOT-INTEGRATION-LOG.md  DIAGRAM-STANDARDS.qmd  DOCUMENT-SKELETON.md  FORMAT-CANON.md  MASTER_TEST_PLAN.md  PHASE5_ComplianceContinuity.md  PHASE5_ContinuousComplianceEngine.md  PHASE5_ContinuousComplianceEngine.qmd  PHASE5_KnowledgeTransfer.md  PHASE5_RuntimeDriftModel.md  PHASE5_RuntimeDriftModel.qmd  PHASE5_TelemetryEvidenceMap.md  PHASE5_TelemetryEvidenceMap.qmd  PROJECT-CONTEXT.qmd  README.md  SCuBA-Pipeline-Runbook.md  STYLE-GUIDE.md  SUMMARY.md  _aspirational-notice.qmd  _quarto.yml  (+72 more)
drift/: drift-engine.md
ecosystem/: UIAO-Ecosystem-Marketplace.md
exports/: appendices.docx  appendices.html  architecture.docx  canon-spec.docx  canon-spec.html  control-plane-architecture.docx  control-plane-architecture.html  crosswalk-index.docx  crosswalk-index.html  executive-faq.docx  executive-faq.html  fedramp-crosswalk.docx  fedramp-crosswalk.html  fedramp22_summary_v1.0.docx  fedramp22_summary_v1.0.html  identity_plane_deep_dive_v1.0.docx  identity_plane_deep_dive_v1.0.html  leadership-briefing.docx  leadership-briefing.html  leadership_briefing_v1.0.docx  leadership_briefing_v1.0.html  logic.docx  logic.html  management-stack.docx  management-stack.html  manifest.json  modernization-timeline.docx  modernization-timeline.html  modernization_timeline_v1.0.docx  modernization_timeline_v1.0.html  nist-mappings.docx  operational_handover_v1.0.docx  operational_handover_v1.0.html  pillar-addressing.docx  pillar-overlay.docx  pitch_deck_v1.0.docx  program-vision.docx  program-vision.html  program_vision_v1.0.docx  program_vision_v1.0.html  (+20 more)
generation-inputs/: diagrams.yaml  uiao_leadership_briefing_v1.0.yaml  uiao_operational_handover_v1.0.yaml  uiao_pitch_deck_v1.0.yaml  visual_manifest_v1.0.yaml
global/: UIAO-Global-Expansion-Localization.md
governance/: Multi-Tenant-Isolation-Model.md
ha/: UIAO-High-Availability.md
impl/: .coveragerc  .gitignore  .lychee.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  HANDOFF-adapter-test-site-research.md  PROJECT-CONTEXT.md  README.md  SECURITY.md  pyproject.toml
inbox/: .gitignore  AD Computer Object Conversion Guide — Entra ID, Intune, and Azure Arc Governance.docx  AI-IMPORT-PROMPT.md  Appendix A — FedRAMP‑Authorized Vendor Integration for the Unified Identity‑Addressing‑Overlay Architecture.docx  Appendix B Glossary and Acronym Table.docx  Application Identity Onboarding Runbook — Word‑ready Paste (Cover page + TOC).docx  Article 01 The Blindfold Problem Bylined.docx  Article 02 The Boundary Problem Bylined.docx  Article 03 The Distance Problem FINAL REGEN.docx  Article 04 The Identity Problem REFORMATTED.docx  Article 05 The Boundary Problem.docx  Article 06 The Telemetry Problem.docx  Article 07 The Optimization Problem.docx  Article 08 The Media Problem.docx  Article 09 The Trust Problem.docx  Article 10 The Policy Problem.docx  Article 11 The Visibility Layer.docx  Article 12 The Continuity Layer.docx  Article 13 The Control Layer.docx  Article 14 The Signal Layer.docx  Article 15 The Evaluation Layer.docx  Article 16 The Decision Layer.docx  Article 17 The Automation Layer.docx  Book.ps1  README.md  (+35 more)
(+4723 files in other folders)
