[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "uiao"
description = "UIAO — Unified Identity-Addressing-Overlay Architecture"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "WhalerMike" }]
keywords = ["fedramp", "oscal", "compliance", "ksi", "scuba", "zero-trust"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Information Technology",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: System :: Systems Administration",
]
dynamic = ["version"]
dependencies = [
  "pydantic>=2.8",
  "pydantic-settings>=2.0",
  "pyyaml>=6.0",
  "typer>=0.12",
  "rich>=13.7",
  "jinja2>=3.1.4",
  "jsonschema>=4.21",
  "markdown>=3.4",
  "python-frontmatter>=1.0",
  "python-docx>=0.8.11",
  "docxtpl>=0.16",
  "python-pptx>=0.6.21",
  "openpyxl>=3.1",
  "matplotlib>=3.8",
  "numpy>=1.24",
  "lxml>=5.0",
  "compliance-trestle>=4.0",
  "compliance-trestle-fedramp",
  "python-hcl2>=4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "ruff>=0.4",
  "mypy>=1.10",
  "pre-commit>=3.7",
  "types-PyYAML",
  "types-requests",
]
# Runtime deps for the uiao.api FastAPI service (entrypoint at
# deploy/windows-server/run.py) and the gcc-boundary-probe adapter,
# which imports httpx. Optional because uiao.cli does not load uiao.api;
# most users of the CLI do not need the API dependencies installed.
api = [
  "fastapi>=0.110",
  "httpx>=0.27",
  "uvicorn>=0.29",
  "msal>=1.28",
]
visuals = [
  "google-genai>=1.0",
  "playwright>=1.40",
]
plantuml = [
  "plantweb>=0.8",
]

[project.urls]
Homepage = "https://github.com/WhalerMike/uiao"
Repository = "https://github.com/WhalerMike/uiao"
Issues = "https://github.com/WhalerMike/uiao/issues"

[project.scripts]
uiao = "uiao.cli.app:app"

[tool.setuptools.dynamic]
version = { attr = "uiao.__version__.__version__" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["uiao*"]
namespaces = true

# Ship canon YAML / schemas / rules / KSI as package data so runtime
# code can access them via importlib.resources.
[tool.setuptools.package-data]
"uiao.adapters" = ["**/*.yaml", "**/*.yml", "**/*.json", "**/*.md"]
"uiao.canon" = ["**/*.yaml", "**/*.yml", "**/*.md", "**/*.json"]
"uiao.schemas" = ["**/*.json", "**/*.yaml", "**/*.yml"]
"uiao.rules" = ["**/*.yaml", "**/*.yml", "**/*.md"]
"uiao.ksi" = ["**/*.yaml", "**/*.yml", "**/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--tb=short"
norecursedirs = [".*", "build", "dist", "node_modules", "*.egg-info", "venv", ".venv"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "E402", "UP006", "UP035", "UP045", "SIM102", "SIM103", "SIM110", "SIM118", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["I001"]
"src/uiao/abstractions/**" = ["I001"]
"scripts/**" = ["I001"]

[tool.ruff.lint.isort]
known-first-party = ["uiao"]
known-third-party = ["pytest", "yaml"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
# disallow_untyped_defs kept off until the 48-site annotation burn-down
# lands; the mypy gate currently enforces shape-correctness only.
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
# warn_return_any flagged 34 returns of dict/list/Any from Optional helper
# functions; kept off until interface shapes are tightened.
warn_return_any = false
exclude = [
    "^scripts/",
    "^tests/",
]

[[tool.mypy.overrides]]
module = ["compliance_trestle.*", "trestle.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["matplotlib.*", "numpy.*", "docxtpl.*", "pptx.*", "openpyxl.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["docx.*", "jinja2.*"]
ignore_missing_imports = true
