[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "uiao"
description = "UIAO — Unified Identity-Addressing-Overlay Architecture"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "WhalerMike" }]
keywords = ["fedramp", "oscal", "compliance", "ksi", "scuba", "zero-trust"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Information Technology",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: System :: Systems Administration",
]
dynamic = ["version"]
dependencies = [
  "pydantic>=2.8",
  "pydantic-settings>=2.0",
  "pyyaml>=6.0",
  "typer>=0.12",
  "rich>=13.7",
  "jinja2>=3.1.4",
  "jsonschema>=4.21",
  "markdown>=3.4",
  "python-frontmatter>=1.0",
  "python-docx>=0.8.11",
  "docxtpl>=0.16",
  "python-pptx>=0.6.21",
  "openpyxl>=3.1",
  "matplotlib>=3.8",
  "numpy>=1.24",
  "lxml>=5.0",
  "compliance-trestle>=4.0",
  "compliance-trestle-fedramp>=0.2",
  "python-hcl2>=4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "ruff>=0.4",
  "mypy>=1.10",
  "pre-commit>=3.7",
  "types-PyYAML",
  "types-requests",
  # Type stubs added in mypy burn-down Phase 1 (issue #279):
  "types-openpyxl",     # stubs for openpyxl — used by uiao.generators.{briefing,charts,docs}
  # NOTE: types-python-docx does NOT exist on PyPI as of 2026-05-01
  # despite issue #279's claim. python-docx-using modules (briefing,
  # rich_docx) keep their per-file overrides for now.
]
# Runtime deps for the uiao.api FastAPI service (entrypoint at
# deploy/windows-server/run.py) and the gcc-boundary-probe adapter,
# which imports httpx. Optional because uiao.cli does not load uiao.api;
# most users of the CLI do not need the API dependencies installed.
api = [
  "fastapi>=0.110",
  "httpx>=0.27",
  "uvicorn>=0.29",
  "msal>=1.28",
]
# Visual-asset pipeline deps:
#   - google-genai: Gemini image generation — src/uiao/generators/
#     gemini_visuals.py and scripts/generate_scuba_images.py import
#     `from google.genai import types`.
#   - playwright: headless-browser diagram rendering fallback — used as
#     a CLI by docs/.github/workflows/{generate-artifacts,render-and-
#     insert-diagrams}.yml (`python -m playwright install chromium`).
#     Not imported from Python (shelled out by src/uiao/generators/
#     diagrams.py when mmdc is unavailable).
visuals = [
  "google-genai>=1.0",
  "playwright>=1.40",
]
# PlantUML fallback rendering via public plantuml.com server.
# `plantweb` is the Python SDK; invoked by src/uiao/generators/mermaid.py
# when UIAO_PLANTUML_JAR is not set and local java is unavailable. Kept
# declared even though no Python import site references it today — the
# config at src/uiao/config.py references this path, and the generator
# lookup is dynamic via plantweb's CLI shim.
plantuml = [
  "plantweb>=0.8",
]

[project.urls]
Homepage = "https://github.com/WhalerMike/uiao"
Repository = "https://github.com/WhalerMike/uiao"
Issues = "https://github.com/WhalerMike/uiao/issues"

[project.scripts]
uiao = "uiao.cli.app:app"

[tool.setuptools.dynamic]
version = { attr = "uiao.__version__.__version__" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["uiao*"]
namespaces = true

# Ship canon YAML / schemas / rules / KSI as package data so runtime
# code can access them via importlib.resources.
[tool.setuptools.package-data]
"uiao.adapters" = ["**/*.yaml", "**/*.yml", "**/*.json", "**/*.md"]
"uiao.canon" = ["**/*.yaml", "**/*.yml", "**/*.md", "**/*.json"]
"uiao.schemas" = ["**/*.json", "**/*.yaml", "**/*.yml"]
"uiao.rules" = ["**/*.yaml", "**/*.yml", "**/*.md"]
"uiao.ksi" = ["**/*.yaml", "**/*.yml", "**/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--tb=short"
norecursedirs = [".*", "build", "dist", "node_modules", "*.egg-info", "venv", ".venv"]

[tool.ruff]
target-version = "py310"
line-length = 120
# inbox/ is the scratch surface (per AGENTS.md): agent-authored drafts,
# nothing here is canon, so it isn't held to production code-quality
# standards. The same exclude was attempted in commit 7f0072bc but lost
# during squash-merge of PR #277 — restoring it here.
exclude = ["inbox"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "E402", "UP006", "UP035", "UP045", "SIM102", "SIM103", "SIM110", "SIM118", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["I001"]
"src/uiao/abstractions/**" = ["I001"]
"scripts/**" = ["I001"]

[tool.ruff.lint.isort]
known-first-party = ["uiao"]
known-third-party = ["pytest", "yaml"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true
warn_return_any = true
exclude = [
    "^scripts/",
    "^tests/",
]

[[tool.mypy.overrides]]
module = ["compliance_trestle.*", "trestle.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["matplotlib.*", "numpy.*", "docxtpl.*", "pptx.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["docx.*", "jinja2.*"]
ignore_missing_imports = true

# Generators that do heavy python-docx / python-pptx / matplotlib work.
# Those third-party libs ship no usable type stubs, so attribute access
# on `Document` / `Presentation` / `Figure` narrows to `Any` / `Optional[Any]`
# and mypy raises whole families of shape errors (attr-defined, valid-type,
# arg-type, assignment, index, operator, call-arg, union-attr). Runtime
# behavior is covered by the pytest suite. Suppress the shape-error codes
# per-file rather than spray `cast()` or `# type: ignore` across every line;
# the full list is in `disable_error_code` below. Flip back on if upstream
# stubs appear.
[[tool.mypy.overrides]]
module = [
    "uiao.generators.briefing",
    "uiao.generators.pptx",
    "uiao.generators.rich_docx",
]
disable_error_code = ["attr-defined", "arg-type", "assignment", "index", "operator", "call-arg", "union-attr", "valid-type"]

# Legacy surfaces with dense stub-gap / duck-typed patterns (importlib.metadata
# PackageMetadata, jinja2 Undefined subclassing, dynamic adapter-class
# reflection, etc.) where every attribute touch raises noise mypy can't
# resolve without stubs. Runtime is covered by the pytest suite; the mypy
# gate accepts these as the post-burndown baseline and enforces zero-new-
# errors for everything else. `disallow_untyped_defs` / `warn_return_any`
# are also relaxed here because the untyped callsites in these files are
# systemic (reflection over adapter classes, Any returns from stub-less
# upstream calls), not correctable without stubs.
[[tool.mypy.overrides]]
module = [
    "uiao.adapters.conformance_check",
    "uiao.adapters.entra_policy_targeting",
    "uiao.cli.adapter_oscal",
    "uiao.evidence.graph",
    "uiao.generators.docs",
    "uiao.generators.gemini_visuals",
    "uiao.generators.sbom",
]
disable_error_code = ["attr-defined", "arg-type", "assignment", "index", "operator", "call-arg", "union-attr", "valid-type", "var-annotated", "override", "str-format", "no-redef", "return-value"]
disallow_untyped_defs = false
warn_return_any = false

# Docx/pptx/matplotlib-heavy generators: add disallow_untyped_defs /
# warn_return_any relaxation alongside the existing shape-error
# suppressions. Same rationale — stub-less third-party libs drive the
# untyped pattern, not untyped code.
[[tool.mypy.overrides]]
module = [
    "uiao.generators.briefing",
    "uiao.generators.pptx",
    "uiao.generators.rich_docx",
]
disallow_untyped_defs = false
warn_return_any = false

# OrgTree OSCAL evidence emitter constructs compliance-trestle pydantic-v1
# models via keyword arguments. Trestle ships no usable mypy stubs; pydantic
# v1 accepts both the Python snake_case attr name and the hyphenated OSCAL
# alias at construction time (runtime-verified), but mypy raises call-arg /
# arg-type on every constructor call. Suppress those two codes; all other
# checks (untyped defs, return-any, attr-defined) remain active.
#
# Belt-and-suspenders: kept alongside the inline `# type: ignore` markers
# at each trestle constructor call. Inline ignores narrow the scope so this
# module-wide override can be removed when trestle ships proper stubs.
[[tool.mypy.overrides]]
module = ["uiao.oscal.orgtree_evidence"]
disable_error_code = ["call-arg", "arg-type"]
